--- a/src/styles/AboutUs.css
+++ b/src/styles/AboutUs.css
@@ -23,9 +23,6 @@ body {
 .container .desc-object {
   display: flex;
   flex-direction: column;
-  /* background-color: #74EBD5; */
-  /* background-image: linear-gradient(90deg, #74EBD5 0%, #9FACE6 100%); */
-
   width: 100%;
   height: 100%;
   align-items: center;
@@ -35,7 +32,6 @@ body {
   padding: 2rem;
 }
 .container .desc-object .row-container {
-  padding-top: 5rem;
   width: 100%;
   height: 100%;
   display: flex;
@@ -68,9 +64,9 @@ body {
 .container .ourteam {
   padding-top: 2rem;
   width: 100%;
+  height: 30em;
   display: flex;
   flex-direction: column;
-  flex-wrap: nowrap;
   align-items: center;
   flex-wrap: wrap;
   padding-bottom: 2rem;
@@ -85,29 +81,28 @@ body {
   flex-direction: column;
   flex-wrap: wrap;
   justify-content: space-between;
-  width:100%;
+  width: 100%;
   text-align: center;
 }
- .container .ourteam .member .member-name {
+.container .ourteam .member .member-name {
   width: 100%;
   justify-content: center;
-   padding-top: 2rem;
+  padding-top: 2rem;
   display: flex;
   flex-direction: row;
   gap: 1rem;
   flex-wrap: wrap;
   margin: auto;
 }
-.container .ourteam .member .name{ 
+.container .ourteam .member .name {
   width: fit-content;
   font-weight: 600;
   font-size: 1.2rem;
   margin: auto;
-  border-bottom: .2rem solid black;
+  border-bottom: 0.2rem solid black;
 }
 
-
-.container .ourteam .member p{
+.container .ourteam .member p {
   display: flex;
   justify-content: center;
   flex-direction: column;
@@ -117,7 +112,6 @@ body {
   height: 10rem;
 
   background-image: linear-gradient(180deg, #a9c9ff 0%, #ffbbec 100%);
-
 }
 
 /* .container .ourteam .member .member-name .row {
