--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -11,6 +11,11 @@
   box-sizing: border-box;
   font-family: 'Noto Sans Khmer', sans-serif;
 }
+body {
+  position: relative;
+  min-height: 100vh;
+}
+
 body, h5, p  {
   margin: 0;
   padding: 0;
@@ -23,6 +28,8 @@ body, h5, p  {
 }
 
 header nav {
+  /*position: fixed;*/
+  /*top: 0;*/
   background-color: black;
   display: flex;
   flex-wrap: wrap;
@@ -118,7 +125,6 @@ header nav form .searched-name .search-show {
   padding: .5em;
   cursor: pointer;
   background-color: rgb(255, 255, 255);
-  border-bottom: 0.1em solid #d4d4d4;
   align-items: center;
   border: 1px solid rgba(0, 0, 0, 0.288);
 }
@@ -128,7 +134,7 @@ header nav form .searched-name .search-show:hover{
   color: white;
 }
 header nav form .searched-name .search-show p{
-  width: 90;
+  width: 90%;
   text-align: center;
 
 }
@@ -174,16 +180,19 @@ header nav .search-icon {
 
 /* start prev and next */
 .btn-page-container {
+  height: 8rem;
+}
+
+.btn-group {
   display: flex;
   flex-direction: row;
-  margin: 2em auto;
+  margin: 2em auto 2rem;
   width: max-content;
   padding: .2vw 1vw;
   /* padding: 0.3em 0.8em 0.3em 0.8em; */
   border-radius: 1em;
   box-shadow: 0 0.2em 1em rgba(0, 0, 0, .2);
   background-color: rgba(2, 122, 72, 0.234);
-  margin-bottom: 2rem;
 }
 
 .btn-page-container button{
@@ -222,6 +231,20 @@ ul li.page-number:active button{
   color: #fff;
 }
 /* end prev and next */
+
+.footer {
+  position: absolute;
+  bottom: 0;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  justify-content: center;
+  width: 100%;
+  height: fit-content;
+  padding: 15px;
+  color: #fff;
+  background-color: black;
+}
 
 /* custom responsive */
 @media (max-width: 1245px) {
